--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,23 @@
-<p>home works!</p>
+<mat-grid-list cols="3"  class="panel-style">
+  <mat-grid-tile *ngFor="let tile of tiles"
+    [colspan]="tile.cols"
+    [rowspan]="tile.rows"
+    [style.background] = "tile.color">
+
+    <mat-card class="card-style">
+      <mat-card-header>
+        <mat-card-title class="card-title-style">{{tile.cardTitle}}</mat-card-title>
+      </mat-card-header>
+
+      <a routerLink={{tile.routerLink}}>
+        <mat-icon class="card-icon-style">{{tile.cardIcon}}</mat-icon>
+      </a>
+
+      <mat-card-content>
+        content
+      </mat-card-content>
+<router-outlet></router-outlet>
+    </mat-card>
+  </mat-grid-tile>
+
+</mat-grid-list>
