--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,17 +1,29 @@
-.panel-style {
-  max-width: 100%;
+.grid-container {
+  margin: 20px;
 }
 
-.card-style {
-  width: 300px;
-  max-width: 100%;
+.dashboard-card {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
 }
 
-.card-icon-style{
-  font-size: 220pt;
+.more-button {
+  position: absolute;
+  top: 5px;
+  right: 10px;
+}
+
+.dashboard-card-content {
   text-align: center;
 }
 
-.card-title-style {
-  text-align: center;
+mat-card img {
+  object-fit: cover;
+  width: 100%;
+  height: 80%;
+  max-width: 250px;
+  max-height: 250px;
 }
