聊天頁面雛型

--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -1,18 +1,39 @@
 <div class="panel">
   <div class="chat-header">
-    <mat-form-field>
-      <mat-label>Select chat room</mat-label>
-      <mat-select>
-        <mat-option *ngFor="let room of rooms" [value]="room.value">
-          {{room.viewValue}}
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
+    <form>
+      <mat-form-field class="select-style">
+        <mat-label>Select chat room</mat-label>
+        <mat-select >
+          <mat-option *ngFor="let room of rooms" [value]="room.value">
+            {{room.viewValue}}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+      <button mat-button><mat-icon>supervisor_account</mat-icon></button>
+    </form>
   </div>
   <div class="chat-body">
-
+    <mat-list>
+      <mat-list-item>
+        <img matListAvatar src="../../assets/luka.png">
+        <h3 matLine>Mesage</h3>
+        <p matLine><span>nickman</span></p>
+      </mat-list-item>
+      <mat-list-item>
+        <h3 matLine>Mesage</h3>
+        <p matLine><span>nickman</span></p>
+        <img matListAvatar src="../../assets/luka.png">
+      </mat-list-item>
+    </mat-list>
   </div>
-  <div class="chat-input">
 
+  <div class="chat-input">
+    <form>
+      <mat-form-field class="input-message">
+        <mat-label>Input message</mat-label>
+        <input matInput placeholder="message" value="Hello?">
+      </mat-form-field>
+      <button mat-button><mat-icon>send</mat-icon></button>
+    </form>
   </div>
 </div>
