--- a/src/app/chat-room/chat-room.component.css
+++ b/src/app/chat-room/chat-room.component.css
@@ -16,10 +16,24 @@
 .chat-body {
   padding: 20px;
   height: 60%;
+  max-height: 60%;
+  overflow: auto;
   background-color: bisque;
 }
 
 .chat-input {
   padding: 20px;
   background-color: burlywood;
+}
+
+.my-message.mat-card {
+  margin-bottom: 5px;
+}
+
+.input-message {
+  width: 90%;
+}
+
+.select-style {
+  width: 300px;
 }
