--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
     </button>
     <span> Miku app </span>
     <span class="top-menu-seprator"></span>
-    <button mat-button><mat-icon>search</mat-icon></button>
+    <button (click)="clickMe()" mat-button><mat-icon>search</mat-icon></button>
     <button mat-button><mat-icon>exit_to_app</mat-icon></button>
   </mat-toolbar-row>
 </mat-toolbar>
