--- a/src/app/chat-room/chat-room.component.html
+++ b/src/app/chat-room/chat-room.component.html
@@ -1,32 +1,62 @@
-<div class="panel">
-  <div class="chat-header">
-    <form>
-      <mat-form-field class="select-style">
-        <mat-label>Select chat room</mat-label>
-        <mat-select >
-          <mat-option *ngFor="let room of rooms" [value]="room.value">
-            {{room.viewValue}}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <button (click)="clickMe()" mat-button><mat-icon>supervisor_account</mat-icon></button>
-    </form>
+<div fxFill fxLayout="column" class="layout">
+  <div fxFlex="68px" class="header">
+    <img class="banner" src="../../assets/luka.png">
   </div>
-  <div class="chat-body">
-    <mat-list>
-      <mat-list-item *ngFor="let msg of msgs">
-        <img matListAvatar src="../../assets/luka.png">
-        <h3 matLine>{{msg.msg}}</h3>
-        <p matLine><span>{{msg.user}}</span></p>
-      </mat-list-item>
-    </mat-list>
-  </div>
+  <div fxFlex fxLayout="row" class="main">
+    <div fxFlex="200px" class="aside">
+      <mat-action-list>
+        <button mat-list-item>
+          <img class="head" src="../../assets/luka.png">
+          User1
+        </button>
+        <button mat-list-item>
+          <img class="head" src="../../assets/luka.png">
+          user2
+        </button>
+      </mat-action-list>
+    </div>
+    <div fxFlex class="content">
+      <div fxFlex fxLayout="column">
+        <!-- chat room function -->
+        <div class="chat-header">
+          <mat-form-field class="input-message">
+            <mat-label>Select chat room</mat-label>
+            <mat-select>
+              <mat-option *ngFor="let room of rooms" [value]="room.value">
+                {{room.viewValue}}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+          <button (click)="clickMe()" mat-button>
+            <mat-icon>supervisor_account</mat-icon>
+          </button>
+        </div>
+        <!-- chat room body -->
+        <div fxFlex fxLayout="row">
+          <div class="chat-body">
+            <mat-list>
+              <mat-list-item *ngFor="let msg of msgs">
+                <img matListAvatar src="../../assets/luka.png">
+                <h3 matLine>{{msg.msg}}</h3>
+                <p matLine><span>{{msg.user}}</span></p>
+              </mat-list-item>
+            </mat-list>
+          </div>
+        </div>
+        <!-- chat room send message -->
+        <div class="chat-input">
+            <mat-form-field class="input-message">
+              <mat-label>Input message</mat-label>
+              <input matInput placeholder="message" value="Hello?">
+            </mat-form-field>
+            <button (click)="getMessages()" mat-button><mat-icon>send</mat-icon></button>
+        </div>
 
-  <div class="chat-input">
-      <mat-form-field class="input-message">
-        <mat-label>Input message</mat-label>
-        <input matInput placeholder="message" value="Hello?">
-      </mat-form-field>
-      <button (click)="getList()" mat-button><mat-icon>send</mat-icon></button>
+      </div>
+    </div>
   </div>
 </div>
+
+<!-- <div class="panel">
+
+</div> -->
